# Bee-CTRL

./: .env  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  bee-ctrl.service  bee_ctrl.service  install_service.sh  perf.data  perf.data.old  requirements.txt  serial.sh
migrations/2021-09-16-073313_measurements/: down.sql  up.sql
src/: bme280.py  ccs811.py  main.rs  mlx90640.py  models.rs  schema.rs  tmp117.py  utils.py
src/sensors/: css811.rs  tmp117.rs
