[package]
name = "bee_ctrl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme280 = {git = "https://github.com/uzaaft/bme280-rs/", package="bme280"}
chrono = { version = "0.4.19", features = ["serde"] }
clap = "2.33.3"
diesel = {version = "1.4.7", features = ["postgres", "r2d2", "chrono", "extras"]} 
dotenv = "0.15.0"
# embedded-ccs811 = "0.2.0"
embedded-hal = "0.2.6"
image = "0.23.14"
linux-embedded-hal = "0.3.0"
mlx9064x = {git = "https://github.com/Uzaaft/mlx9064x-rs", package = "mlx9064x"}
nb = "1.0.0"
# palette = "0.6.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
tmp117 = {git = "https://github.com/uzaaft/tmp117/", package="tmp117"}
